--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,11 +5,13 @@
 }
 
 body {
+  font-family: 'Inter', sans-serif;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.6;
+
 }
 
 .app {
@@ -48,11 +50,7 @@ body {
 }
 
 /* Focus styles */
-button:focus,
-a:focus {
-  outline: 2px solid #712581;
-  outline-offset: 2px;
-}
+
 
 /* Smooth scrolling */
 html {
