--- a/components/Footer/Footer.css
+++ b/components/Footer/Footer.css
@@ -31,27 +31,29 @@
   margin-bottom: 1rem;
 }
 
+
 .logo-icon {
   width: 2rem;
   height: 2rem;
-  background-color: #374151;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 0.5rem;
+  margin-right: 0.4rem;
 }
 
 .logo-text {
   color: white;
   font-size: 0.875rem;
   font-weight: bold;
+  
 }
 
 .brand-name {
   font-size: 1.25rem;
   font-weight: 600;
   color: #111827;
+
 }
 
 .brand-description {
@@ -91,6 +93,7 @@
   margin-top: 2rem;
   padding-top: 2rem;
   text-align: center;
+  height: 2rem;
 }
 
 .copyright {
