--- a/styles/footerMorado.css
+++ b/styles/footerMorado.css
@@ -1,38 +1,37 @@
-.footer {
-  border-top: 1px solid #e5e7eb;
-  background: white;
+.footerM {
+  background: linear-gradient(to bottom right, #712581, #712581, #8B2F9B);
 }
 
-.footer-container {
+.footerM-container {
   max-width: 1280px;
   margin: 0 auto;
   padding: 3rem 1rem;
 }
 
-.footer-content {
+.footerM-content {
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
 }
 
 @media (min-width: 768px) {
-  .footer-content {
+  .footerM-content {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
-.footer-brand {
+.footerM-brand {
   margin-bottom: 1.5rem;
 }
 
-.footer-logo {
+.footerM-logo {
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
 }
 
 
-.logo-icon {
+.logoM-icon {
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
@@ -42,33 +41,26 @@
   margin-right: 0.4rem;
 }
 
-.logo-text {
-  color: white;
-  font-size: 0.875rem;
-  font-weight: bold;
-  
-}
-
-.brand-name22 {
+.brandM-name {
   font-size: 1.2rem;
   font-weight: 600;
-  color: #111827;
+  color: #F1F5F9;
 
 }
 
-.brand-description {
-  color: #6b7280;
+.brandM-description {
+  color: rgba(241, 245, 249, 0.8);
   font-size: 0.875rem;
   line-height: 1.5;
 }
 
-.section-title {
+.sectionM-title {
   font-weight: 600;
-  color: #111827;
+  color: #F1F5F9;
   margin-bottom: 1rem;
 }
 
-.section-links {
+.sectionM-links {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -77,27 +69,27 @@
   gap: 0.5rem;
 }
 
-.footer-link {
-  color: #6b7280;
-  text-decoration: none;
+.footerM-link {
+  color: rgba(241, 245, 249, 0.8);
   font-size: 0.875rem;
-  transition: color 0.2s;
+  text-decoration: none;
+  transition: color 0.3s ease;
 }
 
-.footer-link:hover {
-  color: #712581;
+.footerM-link:hover {
+  color: #248a98;
 }
 
-.footer-bottom {
-  border-top: 1px solid #e5e7eb;
+.footerM-bottom {
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
   margin-top: 2rem;
   padding-top: 2rem;
   text-align: center;
   height: 2rem;
 }
 
-.copyright {
+.copyrightM {
   font-size: 0.875rem;
-  color: #6b7280;
+  color: rgba(241, 245, 249, 0.8);
   margin: 0;
 }
