--- a/components/Hero/Hero.css
+++ b/components/Hero/Hero.css
@@ -1,5 +1,5 @@
 .hero {
-  background: linear-gradient(135deg, #712581 0%, #712581 50%, #8b2f9b 100%);
+  background: linear-gradient(135deg, #742384  0%, #712581 50%, #8b2f9b 100%);
   padding: 4rem 0;
   position: relative;
   overflow: hidden;
@@ -10,7 +10,7 @@
   max-width: 1270px;
   margin: 0 auto;
   padding: 0 1rem;
-  margin-top: 3rem;
+  margin-top: 3.5rem;
 }
 
 .hero-content {
@@ -73,7 +73,7 @@
   }
 }
 
-.btn {
+.btnHero {
   padding: 1rem 2rem;
   font-size: 1.125rem;
   font-weight: 600;
@@ -83,24 +83,24 @@
   transition: all 0.2s;
 }
 
-.btn-primary {
-  background-color: #248a98;
+.btn-primaryHero {
+  background-color: #10cbb4;
   color: white;
 }
 
-.btn-primary:hover {
-  background-color: rgba(36, 138, 152, 0.9);
+.btn-primaryHero:hover {
+  background-color: #00ad97 ;
 }
 
-.btn-secondary {
+.btn-secondaryHero {
   background: transparent;
   color: #f1f5f9;
   border: 2px solid white;
 }
 
-.btn-secondary:hover {
+.btn-secondaryHero:hover {
   background-color: white;
-  color: #712581;
+  color: #742384 ;
 }
 
 .hero-visual {
@@ -180,7 +180,7 @@
 
 .hero-card-highlight {
   height: 5rem;
-  background: linear-gradient(90deg, #712581 0%, #248a98 100%);
+  background: linear-gradient(90deg, #742384 0%, #10cbb4 100%);
   border-radius: 0.5rem;
   display: flex;
   align-items: center;
@@ -202,22 +202,22 @@
   font-size: 1.25rem;
 }
 
-.floating-element-1 {
+.floating-element-1Hero {
   top: -1rem;
   right: -1rem;
   width: 4rem;
   height: 4rem;
-  background-color: #248a98;
+  background-color: #fafafa ;
   animation: bounce 2s infinite;
 }
 
-.floating-element-2 {
+.floating-element-2Hero {
   bottom: -1rem;
-  left: -0.4rem !important;
+  left: -0.4rem ;
   width: 3rem;
   height: 3rem;
   background-color: white;
-  color: #712581;
+  color: #742384;
   animation: pulse 2s infinite;
 }
 
