--- a/components/Hero/Hero.css
+++ b/components/Hero/Hero.css
@@ -7,7 +7,7 @@
 
 .hero-container {
 
-  max-width: 1270px;
+  /* max-width: 1270px; */
   margin: 0 auto;
   padding: 0 1rem;
   margin-top: 3.5rem;
@@ -34,6 +34,14 @@
   line-height: 1.2;
 }
 
+@media (max-width: 1023px) {
+  .hero {
+  padding: 2rem 0;
+  position: relative;
+  overflow: hidden;
+  }
+}
+
 @media (min-width: 768px) {
   .hero-title {
     font-size: 3rem;
@@ -48,9 +56,18 @@
   line-height: 1.2;
 }
 
+
 @media (min-width: 768px) {
   .hero-subtitle {
     font-size: 2.5rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .hero {
+  padding: 2rem 0;
+  position: relative;
+  overflow: hidden;
   }
 }
 
@@ -139,6 +156,10 @@
   width: 0.75rem;
   height: 0.75rem;
   border-radius: 50%;
+}
+
+.hero-text{
+  margin-left: 0.5rem;
 }
 
 .control-red {
