Añadiendo validaciones formulario opcion tarjeta

--- a/styles/vistaPagar.css
+++ b/styles/vistaPagar.css
@@ -175,3 +175,29 @@
     transform: rotate(360deg);
   }
 }
+
+.vp-error-msg {
+  color: #dc2626;
+  font-size: 0.85rem;
+  margin-top: 0.25rem;
+  display: block;
+}
+
+.vp-checkbox {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 0.875rem;
+  color: #4b5563;
+  margin-top: 1rem;
+}
+.vp-checkbox input[type="checkbox"] {
+  transform: translateY(-1px);
+}
+/* .input-error {
+  border: 1px solid #dc2626 !important;
+} */
+.input-error::placeholder {
+  color: #e75d5d !important;
+  opacity: 1; /* para que no se vea atenuado */
+}
