--- a/styles/vistaPagar.css
+++ b/styles/vistaPagar.css
@@ -62,12 +62,13 @@
 }
 
 .vp-form label {
-  display: flex;
-  flex-direction: column;
   font-size: 0.875rem;
   color: #4b5563;
 }
-
+.vp-form label > input {
+  display: block;
+  margin-top: 0.25rem;
+}
 .vp-form input {
   margin-top: 0.25rem;
   padding: 0.5rem 0.75rem;
@@ -200,4 +201,18 @@
 .input-error::placeholder {
   color: #e75d5d !important;
   opacity: 1; /* para que no se vea atenuado */
+}
+label {
+  display: inline-block; /* Asegura que el texto del label se mantenga en línea */
+  font-weight: 500;
+  margin-bottom: 0.3rem;
+}
+
+.required-asterisk {
+  color: red;
+  font-weight: bold;
+  margin-left: 2px;
+  font-size: 1rem;
+  vertical-align: middle;
+  display: inline;
 }
