--- a/styles/header.css
+++ b/styles/header.css
@@ -61,14 +61,16 @@
 
 
 .nav-link {
+  
   color: #6b7280;
   padding: 0.5rem 0.75rem;
-  font-size: 0.875rem;
+  font-size: 0.88rem;
   font-weight: 500;
   transition: all 0.3s ease;
   position: relative;
   text-decoration: none;
   cursor: pointer;
+  margin: 1rem;
   
 }
 
@@ -156,7 +158,7 @@
   }
 }
 
-.animate-gradient-text {
+.animate-gradient-text22 {
   background: linear-gradient(-45deg, #10cbb4, #742384, #10cbb4, #742384);
   background-size: 400% 400%;
   animation: gradient-x 3s ease infinite;
